--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-form-validator-core": "^1.1.1",
     "react-github-calendar": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-parallax-tilt": "^1.4.68",
