--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "codeforces-api": "^1.0.3",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
